--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,8 @@ hs_err_pid*
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -61,7 +62,7 @@ $RECYCLE.BIN/
 
 # IDEA
 .idea/*
-web.iml
+*.iml
 
 # GRADLE
 .gradle/*
