--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ jar {
     manifest {
         attributes 'Implementation-Title': 'PiTurnOnLED',
                 'Implementation-Version': version,
-                'Main-Class': 'Main'
+                'TurnOnLED-Class': 'TurnOnLED'
     }
 }
 
